add webconfig for security and swagger for documentation